--- a/.github/workflows/Python-package.yml
+++ b/.github/workflows/Python-package.yml
@@ -26,4 +26,4 @@ jobs:
     - name: Test with pytest
       run: |
         pip install pytest
-        pytest test_calculator.py
+        pytest project0/test_calculator.py
