--- a/Python-package.yml
+++ b/Python-package.yml
@@ -26,4 +26,4 @@ jobs:
     - name: Test with pytest
       run: |
         pip install pytest
-        pytest project0/test_calculator.py
+        pytest test_calculator.py
